testData/diagnostics/50k_lambdas.diag.txt
ERROR: AST too big. Consider simplifing it
testData/diagnostics/50k_lambdas.nut:1:93

@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()
                                                                                             ^
@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()@()


